# SQL-Query-Youtube-Learner

./: README.md  pyproject.toml
sql_query_learn/: __init__.py  getAnswer.py  search_youtube.py
